@@ -62,6 +62,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc4491.suite',
      'tests.test_rfc4683.suite',
      'tests.test_rfc4985.suite',
+     'tests.test_rfc4998.suite',
      'tests.test_rfc5035.suite',
      'tests.test_rfc5083.suite',
      'tests.test_rfc5084.suite',
