@@ -48,6 +48,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC6492 providing a protocol for provisioning RPKI certificates
 - Add RFC6962 providing Certificate Transparency
 - Add RFC4059 providing Warranty Certificate Extension
+- Add RFC4998 providing Evidence Record Syntax (ERS)
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
